--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
     "gulp-autoprefixer": "^6.0.0",
-    "gulp-babel": "^8.0.0"
+    "gulp-babel": "^8.0.0",
+    "gulp-imagemin": "^5.0.3",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^7.0.0"
   }
 }
