--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sourcemaps": "^2.6.5",
+    "imagemin-gifsicle": "^6.0.1",
+    "imagemin-svgo": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
